--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -76,7 +76,7 @@
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"creditsTranslate": {
-		"message": "¡Traducción por Ameer!",
+		"message": "¡Traducción por DeepL Translator",
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"openSettingsMenu": {
