--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -76,7 +76,7 @@
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"creditsTranslate": {
-		"message": "Terjemahan Oleh Ameer!",
+		"message": "Terjemahan Oleh DeepL Translator",
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"openSettingsMenu": {
