--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -76,7 +76,7 @@
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"creditsTranslate": {
-		"message": "Tradução por Ameer!",
+		"message": "Tradução por DeepL Translator",
 		"description": "Text shows on Roblokis settings page. include your name for credits, you deseve it"
 	},
 	"openSettingsMenu": {
