--- a/roblokis/_locales/de/messages.json
+++ b/roblokis/_locales/de/messages.json
@@ -884,5 +884,57 @@
 	"JoinPublicServer": {
 		"message": "Öffentlichem Server beitreten",
 		"description": "Text shows on friends servers. text shows when your friend is in a public server"
+	},
+	"editorPagesTab": {
+		"message": "Seiten",
+		"description": "in theme editor at the tabs."
+	},
+	"editorComponentAdding": {
+		"message": "Komponente hinzufügen",
+		"description": "in theme editor when adding component."
+	},
+	"editorComponentSearching": {
+		"message": "Komponenten suchen",
+		"description": "in theme editor when adding component."
+	},
+	"editorInfoTab": {
+		"message": "Infos",
+		"description": "in theme editor at the tabs."
+	},
+	"changelogGithubTitle": {
+		"message": "Umgezogen nach Github",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubDescription": {
+		"message": "Alle Änderungen sind in unserem Open Source Github Repository aufgeführt.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubRedirection": {
+		"message": "Klicken Sie hier, um das vollständige Changelog zu sehen.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"themeDark": {
+		"message": "Dunkles Thema",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeLight": {
+		"message": "Helles Thema",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeCornerRadius": {
+		"message": "Ecken Radius",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themeBorderShadow": {
+		"message": "Rand Schatten",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContent": {
+		"message": "Inhalt der Seite",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContentDesc": {
+		"message": "Bearbeitet den mittleren Block, der den Seiteninhalt enthält.",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
 	}
 }
