--- a/roblokis/_locales/es/messages.json
+++ b/roblokis/_locales/es/messages.json
@@ -884,5 +884,57 @@
 	"JoinPublicServer": {
 		"message": "Unirse a un servidor público",
 		"description": "Text shows on friends servers. text shows when your friend is in a public server"
+	},
+	"editorPagesTab": {
+		"message": "Páginas",
+		"description": "in theme editor at the tabs."
+	},
+	"editorComponentAdding": {
+		"message": "Añadir componente",
+		"description": "in theme editor when adding component."
+	},
+	"editorComponentSearching": {
+		"message": "Buscar componentes",
+		"description": "in theme editor when adding component."
+	},
+	"editorInfoTab": {
+		"message": "Información",
+		"description": "in theme editor at the tabs."
+	},
+	"changelogGithubTitle": {
+		"message": "Trasladado a Github",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubDescription": {
+		"message": "Todos los cambios están listados en nuestro repositorio github de código abierto.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubRedirection": {
+		"message": "Haga clic aquí para ver el registro de cambios completo.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"themeDark": {
+		"message": "Tema oscuro",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeLight": {
+		"message": "Tema claro",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeCornerRadius": {
+		"message": "Radio de las esquinas",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themeBorderShadow": {
+		"message": "Sombra del borde",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContent": {
+		"message": "Contenido de la página",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContentDesc": {
+		"message": "Edita el bloque central que contiene el contenido de la página.",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
 	}
 }
