--- a/roblokis/_locales/id/messages.json
+++ b/roblokis/_locales/id/messages.json
@@ -884,5 +884,57 @@
 	"JoinPublicServer": {
 		"message": "Bergabung dengan Server Publik",
 		"description": "Text shows on friends servers. text shows when your friend is in a public server"
+	},
+	"editorPagesTab": {
+		"message": "Halaman",
+		"description": "in theme editor at the tabs."
+	},
+	"editorComponentAdding": {
+		"message": "Tambahkan Komponen",
+		"description": "in theme editor when adding component."
+	},
+	"editorComponentSearching": {
+		"message": "Cari Komponen",
+		"description": "in theme editor when adding component."
+	},
+	"editorInfoTab": {
+		"message": "Info",
+		"description": "in theme editor at the tabs."
+	},
+	"changelogGithubTitle": {
+		"message": "Dipindahkan ke Github",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubDescription": {
+		"message": "Semua perubahan terdaftar di repositori github sumber terbuka kami.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"changelogGithubRedirection": {
+		"message": "Klik di sini untuk melihat catatan perubahan lengkap.",
+		"description": "in changelog tab on roblokis settings page."
+	},
+	"themeDark": {
+		"message": "Tema gelap",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeLight": {
+		"message": "Tema terang",
+		"description": "Text shows in roblokis settings. Shows in editor on info tab"
+	},
+	"themeCornerRadius": {
+		"message": "Radius Sudut",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themeBorderShadow": {
+		"message": "Bayangan Perbatasan",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContent": {
+		"message": "Konten Halaman",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"themePageContentDesc": {
+		"message": "Mengedit blok tengah yang menampung konten halaman.",
+		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
 	}
 }
