--- a/roblokis/_locales/de/messages.json
+++ b/roblokis/_locales/de/messages.json
@@ -412,7 +412,7 @@
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp": {
-		"message": "Desktop-Anwendung.",
+		"message": "Desktop-Anwendung",
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp1": {
@@ -936,5 +936,37 @@
 	"themePageContentDesc": {
 		"message": "Bearbeitet den mittleren Block, der den Seiteninhalt enthält.",
 		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"EditorStyleMenu": {
+		"message": "Menü",
+		"description": "Text shows in roblokis settings. Shows in Editor at styles tab"
+	},
+	"editorStylesTab": {
+		"message": "Stile",
+		"description": "Text shows in roblokis settings. Shows in Theme Editor"
+	},
+	"componmentIcon": {
+		"message": "Breites Logo in der Kopfzeile",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconDesc": {
+		"message": "Bearbeitet das 'ROBLOX'-Logo oben rechts auf der Seite.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconR": {
+		"message": "Kopfzeile Kurzes Logo",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconRDesc": {
+		"message": "Bearbeitet das 'O'-Logo oben rechts auf der Seite.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"StatusRing": {
+		"message": "Freundesstatus-Ring",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
+	},
+	"StatusRingDesc": {
+		"message": "Zeigt die Farbe des Statussymbols eines Freundes um seinen Avatar herum an.",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
 	}
 }
