--- a/roblokis/_locales/pt_BR/messages.json
+++ b/roblokis/_locales/pt_BR/messages.json
@@ -412,7 +412,7 @@
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp": {
-		"message": "Aplicação de secretária.",
+		"message": "Aplicação de secretária",
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp1": {
@@ -936,5 +936,37 @@
 	"themePageContentDesc": {
 		"message": "Edita o bloco central que contém o conteúdo da página.",
 		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"EditorStyleMenu": {
+		"message": "Cardápio",
+		"description": "Text shows in roblokis settings. Shows in Editor at styles tab"
+	},
+	"editorStylesTab": {
+		"message": "Estilos",
+		"description": "Text shows in roblokis settings. Shows in Theme Editor"
+	},
+	"componmentIcon": {
+		"message": "Logotipo amplo do cabeçalho",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconDesc": {
+		"message": "Edita o logotipo \"ROBLOX\" no canto superior direito do site.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconR": {
+		"message": "Logotipo curto do cabeçalho",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconRDesc": {
+		"message": "Edita o logotipo \"O\" no canto superior direito do site.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"StatusRing": {
+		"message": "Anel de status do amigo",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
+	},
+	"StatusRingDesc": {
+		"message": "Mostra a cor do ícone de status do amigo ao redor de seu avatar.",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
 	}
 }
