--- a/roblokis/_locales/tr/messages.json
+++ b/roblokis/_locales/tr/messages.json
@@ -412,7 +412,7 @@
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp": {
-		"message": "Masaüstü Uygulaması.",
+		"message": "Masaüstü Uygulaması",
 		"description": "Text shows in roblokis settings. text for a Section"
 	},
 	"sectionDApp1": {
@@ -936,5 +936,37 @@
 	"themePageContentDesc": {
 		"message": "Sayfa içeriğini tutan orta bloğu düzenler.",
 		"description": "Text shows in Roblokis Settings at Designer Tab. text for theme Editing"
+	},
+	"EditorStyleMenu": {
+		"message": "Menü",
+		"description": "Text shows in roblokis settings. Shows in Editor at styles tab"
+	},
+	"editorStylesTab": {
+		"message": "Stiller",
+		"description": "Text shows in roblokis settings. Shows in Theme Editor"
+	},
+	"componmentIcon": {
+		"message": "Başlık Geniş Logo",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconDesc": {
+		"message": "Sitenin sağ üst köşesindeki 'ROBLOX' logosunu düzenler.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconR": {
+		"message": "Başlık Kısa Logo",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"componmentIconRDesc": {
+		"message": "Sitenin sağ üst köşesindeki 'O' logosunu düzenler.",
+		"description": "Text shows in roblokis settings. Shows in Editor at Pages tab"
+	},
+	"StatusRing": {
+		"message": "Arkadaşlık Durumu Yüzüğü",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
+	},
+	"StatusRingDesc": {
+		"message": "Arkadaşınızın durum simgesi rengini avatarının etrafında gösterir.",
+		"description": "Text shows in roblokis settings. Shows in Design tab"
 	}
 }
